@@ -1,3 +1,8 @@
+2000-06-12  Eskil Heyn Olsen  <eskil@eazel.com>
+
+	* gconf.spec.in: Removed the .a libs from the base package, but
+	added them to -devel.
+
 2000-06-11  Eskil Heyn Olsen  <eskil@eazel.com>
 
 	* gconf.spec.in: Req oaf >= 0.3.0
